_sass/_layout.scss
/* ... */
/**
 * oeffnungszeiten
 */

 #oeffnungszeiten{
   //border: 5px solid red;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: rgba(250,250,250,0.7);
   background-position: center 0;
   margin: 0;
   padding-top: 50px;
   padding-bottom: 50px;
   width: auto;
   height: auto;
   //height: 100vh;
}

.oeffnungszeiten-flexbox-parent {
  //border: 5px solid blue;
  max-width: 100vw;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.oeffnungszeiten-flexbox-item {
  //border: 2px solid lightblue;
  width: 380px;
  max-width: 100vw;
  position: relative;
  z-index: 2;
  background: rgba(250,250,250,1);
  padding-top: 40px;
  padding-bottom: 20px;

}

.overlay-text-list {
  //border: 2px solid lightblue;
  font-size: 20px;
  list-style: none;
}

@media screen and (max-width: $on-palm) {
  #oeffnungszeiten{
    //border: 1px solid purple;
    padding-top: 0;
    padding-bottom: 10px;
    background-color: rgba(240,240,240,1);
  }

  .oeffnungszeiten-flexbox-parent{
    padding-left: 0;
  }
  .oeffnungszeiten-flexbox-item{
    background-color: rgba(240,240,240,1);
  }
  .overlay-text-list {
    //border: 2px solid red;
    font-size: 18px;
    font-size: 5vw;
    list-style: none;
  }
}

/**
 * Ueber uns
 */

 #ueberuns{
   //border: 2px solid lightblue;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: white;
   background-position: center 0;
   margin: 0;
   padding-top: 50px;
   padding-bottom: 50px;
   width: auto;
   height: auto;
   //height: 100vh;
}

.page-heading{
  //border: 5px solid green;
  margin-left: auto;
  margin-right: auto;
  max-width: 1000px;
}

.uns-flexbox-parent {
  //border: 5px solid green;
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
  max-width: 1000px;
  //margin: 0 auto;
  //z-index: 2;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: wrap;

}

.uns-flexbox-item {
  //border: 2px solid lightblue;
  width: 250px;
  font-size: 17px;
  margin: 10px;

}

.round-picture {
  opacity: 1;
  transition: opacity 2s; /* explorer 10 */
  -webkit-transition: opacity 2s; /* chrome & safari */
  -moz-transition: opacity 2s; /* firefox */
  -o-transition: opacity 2s;
}

.round-picture:hover {
  opacity: 0.7;
}

// when the screen becomes mobilephonesize, do this:
@media screen and (max-width: $on-palm) {
  #ueberuns{
    //border: 1px solid green;
    height: auto;
  }

  .uns-flexbox-parent {
    //border: 1px solid red;
  }

  .round-picture {
    max-width: 250px;
    margin-left: auto;
    margin-right: auto;
  }

  .round-picture:hover {
    opacity: 1;
  }

  .uns-flexbox-item {
    width: auto;
    margin: 10px;
  }
}


/**
 * Anfahrt
 */

#anfahrt{
  background: $green-color;
  margin-top: 50px;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;

  padding: 0;
  width: auto;
  height: auto;
}


.image_container {
  width: 100%;
  padding: 0;
  margin: 0;
}



/**
 * Gallery
 */

#gallery{
  //border: 2px solid lightblue;
  height: auto;
  padding-top: 50px;
  padding-bottom: 80px;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-color: rgba(250,250,250,0.8);
  background-position: center 0;
}

.gallery-flexbox-parent {
  //border: 5px solid red;
  margin-left: auto;
  margin-right: auto;
  max-width: 1400px;
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
}

.gallery-flexbox-item{
  //border: 5px solid blue;
  max-width: 480px;
  max-height: 270px;
  margin: 10px;
  overflow: hidden;

}

.galleryimage {
	//border: 2px solid lightblue;
  width: auto;
  z-index: 1;

	transform: translate3d(0, 0, 0) scale3d(1.3, 1.3, 1);
  transition: transform 0.5s; /* explorer 10 */
  -webkit-transition: transform 0.5s; /* chrome & safari */
  -moz-transition: transform 0.5s; /* firefox */
  -o-transition: transform 0.5s;
}

.gallery-image-title {
  //border: 2px solid lightblue;
  width: 400px;
  z-index: 2;
	bottom: 0;
	margin: 0;
	padding: 1em;
	color: white;
	font-size: 1.2em;
	line-height: 1;
  opacity: 0;
  transform: translate3d(3%, 0, 0);
	transition: transform 0.4s, opacity 2s;
  -webkit-transition: transform 0.4s, opacity 2s; /* chrome & safari */
  -moz-transition: transform 0.4s, opacity 2s; /* firefox */
  -o-transition: transform 0.4s, opacity 2s;
}

.gallery-flexbox-item:hover {
  .galleryimage {
  transform: translate3d(0, 0, 0);
  }
  .gallery-image-title {
  opacity: 1;
	transform: translate3d(3%,-100%, 0);
  }
}
/* ... */

